# banafo-asr

./: .gitignore  .markdownlint.json
hosted-api-asr-code-samples/: README.md
hosted-api-asr-code-samples/javascript/pre-recorded/client-parallel/: README.md  package-lock.json  pre-recorded-client-parallel.mjs
hosted-api-asr-code-samples/javascript/pre-recorded/client-sequential/: README.md  pre-recorded-client-sequential.mjs
hosted-api-asr-code-samples/javascript/streaming/client-file/: README.md  package.json  streaming-client-file.mjs
integration-demos/asterisk/modules/asterisk-banafo/: Makefile.am  README.md  configure.ac
integration-demos/asterisk/modules/asterisk-banafo/docker/: Dockerfile  docker-compose.yml
integration-demos/asterisk/modules/asterisk-banafo/docker/conf/: aeap.conf  asterisk.conf  extensions.conf  iax.conf  logger.conf  modules.conf  mrcp.conf  pjsip.conf  res_speech_banafo.conf  sip.conf  voicemail.conf
integration-demos/asterisk/modules/asterisk-banafo/res-speech-banafo/: Makefile.am  res_speech_banafo.c  res_speech_banafo.conf
integration-demos/auto_uploader/: README.md
integration-demos/auto_uploader/python/: auto_uploader.py  auto_uploader_db.py  auto_uploader_events.py  banafo_client.py
integration-demos/auto_uploader/scripts/: auto_detect.sh  auto_uploader  auto_uploader.service  auto_uploader.sh  auto_uploader.timer  auto_uploader_events.service  auto_uploader_tests.sh  config.sh  install.sh  requirements.txt  uninstall.sh
integration-demos/freeswitch/modules/freeswitch-banafo/: README.md
integration-demos/freeswitch/modules/freeswitch-banafo/mod_banafo_transcribe/: LICENSE  Makefile.am  audio_pipe.cpp  audio_pipe.hpp  banafo_transcribe_glue.cpp  banafo_transcribe_glue.h  mod_banafo_transcribe.c  mod_banafo_transcribe.h
on-premise-asr-code-samples/: README.md
on-premise-asr-code-samples/go/post-processed/client-parallel/: .gitignore  README.md  go.mod  go.sum  main.go
(+68 files in other folders)
